# CLion-CMake-Embedded-Template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.c
STM32/: gcc-arm-none-eabi.cmake
app/: arm.c
